tests/machine/x/scala/group_by_left_join.scala
// Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z
object group_by_left_join {
  case class Customer(id: Int, name: String)
  case class Order(id: Int, customerId: Int)
  case class Stat(c: Customer, o: Option[Order])
  case class Stat1(name: String, count: Int)

  case class _Group[K,T](key: K, items: List[T]) extends Iterable[T] { def iterator: Iterator[T] = items.iterator }

  def main(args: Array[String]): Unit = {
    val customers = List(Map("id" -> 1, "name" -> "Alice"), Map("id" -> 2, "name" -> "Bob"), Map("id" -> 3, "name" -> "Charlie"))
    val orders = List(Map("id" -> 100, "customerId" -> 1), Map("id" -> 101, "customerId" -> 1), Map("id" -> 102, "customerId" -> 2))
    val stats = ((for { c <- customers; o = orders.find(o => (o.customerId).asInstanceOf[Int] == c.id) } yield (c.name, Stat(c = c, o = o))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).map{ g => Map("name" -> g.key, "count" -> (for { r <- g; if r.o.nonEmpty } yield r).size) }.toList
    println("--- Group Left Join ---")
    for(s <- stats) {
      println(s"${s.name} orders: ${s.count}")
    }
  }
}
